<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_mathData" Id="{a28dfba0-eaed-4d0f-abc8-e4e1fcc19348}">
    <Declaration><![CDATA[TYPE ST_mathData :
STRUCT
	rSum: REAL;
	rSumVarDb: REAL;
	ravg: REAL;
	rvariancia: REAL;
	rDesvio: REAL;
	rCoefVar: REAL;
	rMin: REAL;
	rMax: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>